# GlassKit

./: README.md
archive/openai-realtime-expo/: AGENTS.md  tech-arch.md
archive/openai-realtime-expo/backend/: README.md  package-lock.json  package.json  server.ts
archive/openai-realtime-expo/client/: .gitignore  app.json  eslint.config.js  package-lock.json  package.json
archive/privacy-filter/: CLAUDE.md  README.md
archive/privacy-filter/backend/: .gitignore  README.md  mediamtx.yml  pyproject.toml
archive/privacy-filter/backend/api/: main.py
archive/privacy-filter/backend/filter/: .gitignore  main.py  test_whisper_realtime.py
archive/privacy-filter/backend/filter/misc/: config.py  consent_capture.py  consent_detector.py  consent_manager.py  face_detector.py  face_recognizer.py  logging.py  metrics.py  pipeline.py  queues.py  shutdown.py  state.py  types.py
archive/privacy-filter/backend/filter/threads/: audio.py  base.py  input.py  monitor.py  output.py  speech_worker.py  vad.py  video.py
archive/privacy-filter/backend/shared/: consent_file_utils.py
examples/: realtime-memo.md
examples/rokid-openai-realtime/: AGENTS.md  README.md
examples/rokid-openai-realtime-rfdetr/: AGENTS.md  README.md
examples/rokid-openai-realtime-rfdetr/backend/: .env.example  README.md  inference-sample.py  logging_utils.py  main.py  pyproject.toml  vision.py
examples/rokid-openai-realtime-rfdetr/rokid/: README.md  settings.gradle.kts
examples/rokid-openai-realtime/backend/: .gitignore  README.md  (+4 more)
examples/rokid-rfdetr/: AGENTS.md  README.md  speedrun-memo.md
(+68 files in other folders)
